Push classify file scan

--- a/Update.ipynb
+++ b/Update.ipynb
@@ -166,6 +166,102 @@
     "# Hiển thị giao diện\n",
     "display(pdf_file_dropdown, submit_button, progress_bar, status_label, result_output)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Đoạn code phân loại File scan và không scan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "from pdfminer.high_level import extract_text\n",
+    "from pdfminer.pdfparser import PDFParser\n",
+    "from pdfminer.pdfdocument import PDFDocument"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moved ACV_Baocaothuongnien_2019.pdf to scanned_pdfs folder.\n",
+      "Moved DNL_Baocaothuongnien_2020.pdf to scanned_pdfs folder.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "from pdfminer.high_level import extract_text\n",
+    "\n",
+    "# Hàm để kiểm tra xem file PDF có chứa nội dung text không\n",
+    "def is_scanned_pdf(file_path, keyword=\"test\"):\n",
+    "    try:\n",
+    "        # Đếm số trang không chứa keyword\n",
+    "        pages_without_keyword = 0\n",
+    "        total_pages = 0\n",
+    "\n",
+    "        # Sử dụng extract_text để lấy văn bản từ file PDF\n",
+    "        text = extract_text(file_path)\n",
+    "        \n",
+    "        # Chia văn bản thành các trang (mỗi trang có thể ngăn cách bằng '\\f')\n",
+    "        pages = text.split('\\f')\n",
+    "        total_pages = len(pages)\n",
+    "\n",
+    "        # Đếm số trang không chứa từ khóa\n",
+    "        for page in pages:\n",
+    "            if not page.strip() or keyword.lower() not in page.lower():\n",
+    "                pages_without_keyword += 1\n",
+    "\n",
+    "        # Nếu có 10 trang trở lên không chứa keyword, file được phân loại là scanned\n",
+    "        if pages_without_keyword >= 10:\n",
+    "            return True  # PDF scan\n",
+    "        else:\n",
+    "            return False  # Không phải PDF scan (có thể tìm kiếm nội dung)\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        # Nếu có lỗi trong khi trích xuất, có thể file là scan hoặc bị lỗi\n",
+    "        print(f\"Error processing {file_path}: {e}\")\n",
+    "        return True  # Giả định là file scan nếu không đọc được\n",
+    "\n",
+    "# Thư mục chứa file PDF cần phân loại\n",
+    "source_directory = \"DemoScan/\"  # Thay bằng đường dẫn của bạn\n",
+    "\n",
+    "# Tạo các thư mục cho file scan và không scan\n",
+    "scanned_folder = \"./DemoScan/scanned_pdfs\"\n",
+    "non_scanned_folder = \"./DemoScan/non_scanned_pdfs\"\n",
+    "os.makedirs(scanned_folder, exist_ok=True)\n",
+    "os.makedirs(non_scanned_folder, exist_ok=True)\n",
+    "\n",
+    "# Lấy danh sách các file PDF trong thư mục nguồn\n",
+    "pdf_files = [f for f in os.listdir(source_directory) if f.endswith('.pdf')]\n",
+    "\n",
+    "# Phân loại và di chuyển các file PDF\n",
+    "for pdf_file in pdf_files:\n",
+    "    file_path = os.path.join(source_directory, pdf_file)\n",
+    "    \n",
+    "    # Kiểm tra loại file và di chuyển vào thư mục tương ứng\n",
+    "    if is_scanned_pdf(file_path):\n",
+    "        destination = os.path.join(scanned_folder, pdf_file)\n",
+    "        shutil.move(file_path, destination)\n",
+    "        print(f\"Moved {pdf_file} to scanned_pdfs folder.\")\n",
+    "    else:\n",
+    "        destination = os.path.join(non_scanned_folder, pdf_file)\n",
+    "        shutil.move(file_path, destination)\n",
+    "        print(f\"Moved {pdf_file} to non_scanned_pdfs folder.\")\n"
+   ]
   }
  ],
  "metadata": {
