--- a/Update.ipynb
+++ b/Update.ipynb
@@ -176,91 +176,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import shutil\n",
-    "from pdfminer.high_level import extract_text\n",
-    "from pdfminer.pdfparser import PDFParser\n",
-    "from pdfminer.pdfdocument import PDFDocument"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Moved ACV_Baocaothuongnien_2019.pdf to scanned_pdfs folder.\n",
-      "Moved DNL_Baocaothuongnien_2020.pdf to scanned_pdfs folder.\n"
+      "ACV_Baocaothuongnien_2019.pdf: 42.64% text present\n",
+      "File ACV_Baocaothuongnien_2019.pdf is currently in use. Retrying (1/10) in 1 second...\n",
+      "File ACV_Baocaothuongnien_2019.pdf is currently in use. Retrying (2/10) in 1 second...\n",
+      "File ACV_Baocaothuongnien_2019.pdf is currently in use. Retrying (3/10) in 1 second...\n",
+      "File ACV_Baocaothuongnien_2019.pdf is currently in use. Retrying (4/10) in 1 second...\n",
+      "File ACV_Baocaothuongnien_2019.pdf is currently in use. Retrying (5/10) in 1 second...\n",
+      "File ACV_Baocaothuongnien_2019.pdf is currently in use. Retrying (6/10) in 1 second...\n",
+      "File ACV_Baocaothuongnien_2019.pdf is currently in use. Retrying (7/10) in 1 second...\n",
+      "File ACV_Baocaothuongnien_2019.pdf is currently in use. Retrying (8/10) in 1 second...\n",
+      "File ACV_Baocaothuongnien_2019.pdf is currently in use. Retrying (9/10) in 1 second...\n",
+      "File ACV_Baocaothuongnien_2019.pdf is currently in use. Retrying (10/10) in 1 second...\n",
+      "DNL_Baocaothuongnien_2020.pdf: 0.00% text present\n",
+      "Moved DNL_Baocaothuongnien_2020.pdf to ./DemoScan/scanned_pdfs.\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "import shutil\n",
-    "from pdfminer.high_level import extract_text\n",
+    "import fitz\n",
+    "import time\n",
     "\n",
-    "# Hàm để kiểm tra xem file PDF có chứa nội dung text không\n",
-    "def is_scanned_pdf(file_path, keyword=\"test\"):\n",
-    "    try:\n",
-    "        # Đếm số trang không chứa keyword\n",
-    "        pages_without_keyword = 0\n",
-    "        total_pages = 0\n",
-    "\n",
-    "        # Sử dụng extract_text để lấy văn bản từ file PDF\n",
-    "        text = extract_text(file_path)\n",
-    "        \n",
-    "        # Chia văn bản thành các trang (mỗi trang có thể ngăn cách bằng '\\f')\n",
-    "        pages = text.split('\\f')\n",
-    "        total_pages = len(pages)\n",
-    "\n",
-    "        # Đếm số trang không chứa từ khóa\n",
-    "        for page in pages:\n",
-    "            if not page.strip() or keyword.lower() not in page.lower():\n",
-    "                pages_without_keyword += 1\n",
-    "\n",
-    "        # Nếu có 10 trang trở lên không chứa keyword, file được phân loại là scanned\n",
-    "        if pages_without_keyword >= 10:\n",
-    "            return True  # PDF scan\n",
-    "        else:\n",
-    "            return False  # Không phải PDF scan (có thể tìm kiếm nội dung)\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        # Nếu có lỗi trong khi trích xuất, có thể file là scan hoặc bị lỗi\n",
-    "        print(f\"Error processing {file_path}: {e}\")\n",
-    "        return True  # Giả định là file scan nếu không đọc được\n",
-    "\n",
-    "# Thư mục chứa file PDF cần phân loại\n",
-    "source_directory = \"DemoScan/\"  # Thay bằng đường dẫn của bạn\n",
-    "\n",
-    "# Tạo các thư mục cho file scan và không scan\n",
-    "scanned_folder = \"./DemoScan/scanned_pdfs\"\n",
-    "non_scanned_folder = \"./DemoScan/non_scanned_pdfs\"\n",
-    "os.makedirs(scanned_folder, exist_ok=True)\n",
-    "os.makedirs(non_scanned_folder, exist_ok=True)\n",
-    "\n",
-    "# Lấy danh sách các file PDF trong thư mục nguồn\n",
-    "pdf_files = [f for f in os.listdir(source_directory) if f.endswith('.pdf')]\n",
-    "\n",
-    "# Phân loại và di chuyển các file PDF\n",
-    "for pdf_file in pdf_files:\n",
-    "    file_path = os.path.join(source_directory, pdf_file)\n",
+    "def get_text_percentage(file_name: str) -> float:\n",
+    "    \"\"\"\n",
+    "    Calculate the percentage of document that is covered by (searchable) text.\n",
     "    \n",
-    "    # Kiểm tra loại file và di chuyển vào thư mục tương ứng\n",
-    "    if is_scanned_pdf(file_path):\n",
-    "        destination = os.path.join(scanned_folder, pdf_file)\n",
-    "        shutil.move(file_path, destination)\n",
-    "        print(f\"Moved {pdf_file} to scanned_pdfs folder.\")\n",
-    "    else:\n",
-    "        destination = os.path.join(non_scanned_folder, pdf_file)\n",
-    "        shutil.move(file_path, destination)\n",
-    "        print(f\"Moved {pdf_file} to non_scanned_pdfs folder.\")\n"
+    "    If the returned percentage of text is very low, the document is\n",
+    "    most likely a scanned PDF.\n",
+    "    \"\"\"\n",
+    "    total_page_area = 0.0\n",
+    "    total_text_area = 0.0\n",
+    "\n",
+    "    doc = fitz.open(file_name)\n",
+    "\n",
+    "    for page in doc:\n",
+    "        total_page_area += abs(page.rect)  # Diện tích tổng của trang\n",
+    "        text_area = sum(abs(fitz.Rect(b[:4])) for b in page.get_text(\"blocks\"))  # Tính tổng diện tích văn bản\n",
+    "        total_text_area += text_area\n",
+    "\n",
+    "    doc.close()\n",
+    "    return total_text_area / total_page_area if total_page_area > 0 else 0\n",
+    "\n",
+    "def classify_pdfs(source_directory: str, scanned_folder: str, non_scanned_folder: str):\n",
+    "    \"\"\"\n",
+    "    Classify PDFs into scanned and non-scanned folders based on text content percentage.\n",
+    "    \"\"\"\n",
+    "    # Tạo các thư mục cho file scan và không scan nếu chưa tồn tại\n",
+    "    os.makedirs(scanned_folder, exist_ok=True)\n",
+    "    os.makedirs(non_scanned_folder, exist_ok=True)\n",
+    "\n",
+    "    # Lấy danh sách các file PDF trong thư mục nguồn\n",
+    "    pdf_files = [f for f in os.listdir(source_directory) if f.endswith('.pdf')]\n",
+    "\n",
+    "    # Phân loại và di chuyển các file PDF\n",
+    "    for pdf_file in pdf_files:\n",
+    "        file_path = os.path.join(source_directory, pdf_file)\n",
+    "\n",
+    "        # Tính phần trăm văn bản\n",
+    "        text_perc = get_text_percentage(file_path)\n",
+    "        \n",
+    "        # In ra phần trăm văn bản\n",
+    "        print(f\"{pdf_file}: {text_perc:.2%} text present\")\n",
+    "\n",
+    "        # Định nghĩa thư mục đích\n",
+    "        destination = scanned_folder if text_perc < 0.01 else non_scanned_folder\n",
+    "\n",
+    "        # Thử di chuyển file, xử lý lỗi nếu cần\n",
+    "        max_retries = 5  # Số lần thử tối đa\n",
+    "        retries = 0\n",
+    "        while retries < max_retries:\n",
+    "            try:\n",
+    "                shutil.move(file_path, os.path.join(destination, pdf_file))\n",
+    "                print(f\"Moved {pdf_file} to {destination}.\")\n",
+    "                break  # Thoát khỏi vòng lặp nếu di chuyển thành công\n",
+    "            except PermissionError:\n",
+    "                retries += 1\n",
+    "                print(f\"File {pdf_file} is currently in use. Retrying ({retries}/{max_retries}) in 1 second...\")\n",
+    "                time.sleep(1)  # Chờ 1 giây trước khi thử lại\n",
+    "            except Exception as e:\n",
+    "                print(f\"An unexpected error occurred: {e}\")\n",
+    "                break  # Thoát khỏi vòng lặp nếu có lỗi khác\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    source_directory = \"./DemoScan\"  # Đường dẫn đến thư mục chứa các file PDF\n",
+    "    scanned_folder = \"./DemoScan/scanned_pdfs\"\n",
+    "    non_scanned_folder = \"./DemoScan/non_scanned_pdfs\"\n",
+    "    \n",
+    "    classify_pdfs(source_directory, scanned_folder, non_scanned_folder)\n"
    ]
   }
  ],
