--- a/Update.ipynb
+++ b/Update.ipynb
@@ -15,6 +15,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Đoạn code để xuất ra file excel sau khi đếm keyword"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -165,6 +172,214 @@
     "\n",
     "# Hiển thị giao diện\n",
     "display(pdf_file_dropdown, submit_button, progress_bar, status_label, result_output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Đoạn code để xuất ra file json sang sau khi đếm keyword"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "569a77c7af6242b8a81da3ca29770077",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Select PDF File', options=('CAG_Baocaothuongnien_2018.pdf', 'CMP_Baocaothuongnien_2021.p…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a39c4de88e4349d1ac38bc84dc283f5c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Submit', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c6995488cdf946efbc2e3dff7b468bf3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', max=1.0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "734aab0623104a13bc68ae5d429181be",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Label(value='')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5733e021f049431f984a15750c181496",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import os\n",
+    "import re\n",
+    "from pdfminer.high_level import extract_text\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "\n",
+    "# Hàm để đếm số lần xuất hiện của các từ khóa\n",
+    "def count_word_occurrences(file_path, target_words, progress_bar, status_label):\n",
+    "    # Đọc nội dung từ file PDF\n",
+    "    with open(file_path, 'rb') as file:\n",
+    "        text = extract_text(file)\n",
+    "\n",
+    "    # Chuyển nội dung thành chữ thường\n",
+    "    content_lower = text.lower()\n",
+    "\n",
+    "    # Tạo danh sách kết quả\n",
+    "    occurrences = {}\n",
+    "    for i, target_word in enumerate(target_words):\n",
+    "        # Cập nhật thanh tiến trình và trạng thái\n",
+    "        progress_bar.value = (i + 1) / len(target_words)\n",
+    "        status_label.value = f\"Đang kiểm tra từ khóa '{target_word}'...\"\n",
+    "        \n",
+    "        # Chuyển từ khóa thành chữ thường và tìm kiếm\n",
+    "        target_word_lower = target_word.lower()\n",
+    "        pattern = re.compile(r'\\b{}\\b'.format(re.escape(target_word_lower)))\n",
+    "        count = len(re.findall(pattern, content_lower))\n",
+    "        occurrences[target_word] = count\n",
+    "        \n",
+    "    return occurrences\n",
+    "\n",
+    "# Tự động lấy danh sách file PDF trong thư mục\n",
+    "directory_path = \"DemoPDF/\"  # Thư mục chứa các file PDF\n",
+    "pdf_files = [f for f in os.listdir(directory_path) if f.endswith('.pdf')]\n",
+    "\n",
+    "# Đọc danh sách từ khóa từ file txt\n",
+    "txt_file = \"keywords.txt\"\n",
+    "with open(txt_file, \"r\", encoding=\"utf-8\") as file:\n",
+    "    keywords = [line.strip() for line in file.readlines()]\n",
+    "\n",
+    "# Thiết lập giao diện\n",
+    "pdf_file_dropdown = widgets.Dropdown(options=pdf_files, description='Select PDF File')\n",
+    "submit_button = widgets.Button(description='Submit')\n",
+    "progress_bar = widgets.FloatProgress(value=0.0, min=0.0, max=1.0, description='Progress:', bar_style='info')\n",
+    "status_label = widgets.Label(value=\"\")\n",
+    "result_output = widgets.Output()\n",
+    "\n",
+    "# Hàm xử lý khi bấm nút Submit\n",
+    "def on_submit_clicked(b):\n",
+    "    pdf_file = pdf_file_dropdown.value\n",
+    "    progress_bar.value = 0\n",
+    "    status_label.value = \"Bắt đầu đếm từ khóa...\"\n",
+    "    count_results = count_word_occurrences(os.path.join(directory_path, pdf_file), keywords, progress_bar, status_label)\n",
+    "    \n",
+    "    # Chuẩn bị dữ liệu cho file JSON\n",
+    "    new_results = [{\"PDF File\": pdf_file, \"Keyword\": keyword, \"Count\": count} for keyword, count in count_results.items()]\n",
+    "    \n",
+    "    output_file = \"all_pdf_keyword_counts.json\"\n",
+    "    \n",
+    "    # Nếu file JSON đã tồn tại, thêm dữ liệu mới vào sau các dữ liệu cũ\n",
+    "    if os.path.exists(output_file):\n",
+    "        with open(output_file, 'r', encoding='utf-8') as f:\n",
+    "            existing_data = json.load(f)\n",
+    "            existing_data.extend(new_results)\n",
+    "        \n",
+    "        with open(output_file, 'w', encoding='utf-8') as f:\n",
+    "            json.dump(existing_data, f, ensure_ascii=False, indent=4)\n",
+    "    else:\n",
+    "        # Nếu file chưa tồn tại, tạo file mới\n",
+    "        with open(output_file, 'w', encoding='utf-8') as f:\n",
+    "            json.dump(new_results, f, ensure_ascii=False, indent=4)\n",
+    "    \n",
+    "    with result_output:\n",
+    "        result_output.clear_output()\n",
+    "        print(f\"Kết quả đã được lưu vào file JSON: {output_file}\")\n",
+    "    \n",
+    "    status_label.value = \"Hoàn thành!\"\n",
+    "\n",
+    "# Gán hàm xử lý vào nút\n",
+    "submit_button.on_click(on_submit_clicked)\n",
+    "\n",
+    "# Hiển thị giao diện\n",
+    "display(pdf_file_dropdown, submit_button, progress_bar, status_label, result_output)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Đoạn code chuyển dữ liệu từ file json sang excel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dữ liệu đã được chuyển đổi và lưu vào file Excel: all_pdf_keyword_counts.xlsx\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import json\n",
+    "\n",
+    "# Đọc dữ liệu từ file JSON\n",
+    "json_file = \"all_pdf_keyword_counts.json\"  # Đường dẫn tới file JSON\n",
+    "with open(json_file, 'r', encoding='utf-8') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# Chuyển đổi dữ liệu thành DataFrame\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Lưu DataFrame vào file Excel\n",
+    "excel_file = \"all_pdf_keyword_counts.xlsx\"  # Đường dẫn tới file Excel đầu ra\n",
+    "df.to_excel(excel_file, index=False)\n",
+    "\n",
+    "print(f\"Dữ liệu đã được chuyển đổi và lưu vào file Excel: {excel_file}\")\n"
    ]
   },
   {
