Push update All file pdf button

--- a/Update.ipynb
+++ b/Update.ipynb
@@ -183,18 +183,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "569a77c7af6242b8a81da3ca29770077",
+       "model_id": "436e870c5cc54d6493a93dfc8f6d5f33",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='Select PDF File', options=('CAG_Baocaothuongnien_2018.pdf', 'CMP_Baocaothuongnien_2021.p…"
+       "Dropdown(description='Select PDF File', options=('All PDF Files', 'CAG_Baocaothuongnien_2018.pdf', 'CMP_Baocao…"
       ]
      },
      "metadata": {},
@@ -203,7 +203,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a39c4de88e4349d1ac38bc84dc283f5c",
+       "model_id": "5339dcfa965d446abbdcedccc0903f62",
        "version_major": 2,
        "version_minor": 0
       },
@@ -217,7 +217,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6995488cdf946efbc2e3dff7b468bf3",
+       "model_id": "108c456cc0a84d4bb8afb54fd0b7fd72",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +231,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "734aab0623104a13bc68ae5d429181be",
+       "model_id": "2e494fa7900c40c8a40af9d439e0abd2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,7 +245,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5733e021f049431f984a15750c181496",
+       "model_id": "1881b93f97e349d0ae310a1eeb4df7b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -265,32 +265,31 @@
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
     "\n",
-    "# Hàm để đếm số lần xuất hiện của các từ khóa\n",
+    "# Hàm để đếm số lần xuất hiện của các từ khóa với phân biệt hoa-thường\n",
     "def count_word_occurrences(file_path, target_words, progress_bar, status_label):\n",
-    "    # Đọc nội dung từ file PDF\n",
     "    with open(file_path, 'rb') as file:\n",
     "        text = extract_text(file)\n",
     "\n",
-    "    # Chuyển nội dung thành chữ thường\n",
-    "    content_lower = text.lower()\n",
-    "\n",
-    "    # Tạo danh sách kết quả\n",
     "    occurrences = {}\n",
     "    for i, target_word in enumerate(target_words):\n",
-    "        # Cập nhật thanh tiến trình và trạng thái\n",
     "        progress_bar.value = (i + 1) / len(target_words)\n",
     "        status_label.value = f\"Đang kiểm tra từ khóa '{target_word}'...\"\n",
     "        \n",
-    "        # Chuyển từ khóa thành chữ thường và tìm kiếm\n",
-    "        target_word_lower = target_word.lower()\n",
-    "        pattern = re.compile(r'\\b{}\\b'.format(re.escape(target_word_lower)))\n",
-    "        count = len(re.findall(pattern, content_lower))\n",
-    "        occurrences[target_word] = count\n",
+    "        # Kiểm tra phân biệt hoa-thường cho \"AI\" và \"ai\"\n",
+    "        if target_word == \"AI\":\n",
+    "            count = len(re.findall(r'\\bAI\\b', text))\n",
+    "        elif target_word == \"ai\":\n",
+    "            count = len(re.findall(r'\\bai\\b', text))\n",
+    "        else:\n",
+    "            pattern = re.compile(r'\\b{}\\b'.format(re.escape(target_word)), re.IGNORECASE)\n",
+    "            count = len(re.findall(pattern, text))\n",
     "        \n",
+    "        occurrences[target_word] = count\n",
+    "\n",
     "    return occurrences\n",
     "\n",
     "# Tự động lấy danh sách file PDF trong thư mục\n",
-    "directory_path = \"DemoPDF/\"  # Thư mục chứa các file PDF\n",
+    "directory_path = \"DemoPDF/\"  \n",
     "pdf_files = [f for f in os.listdir(directory_path) if f.endswith('.pdf')]\n",
     "\n",
     "# Đọc danh sách từ khóa từ file txt\n",
@@ -298,8 +297,11 @@
     "with open(txt_file, \"r\", encoding=\"utf-8\") as file:\n",
     "    keywords = [line.strip() for line in file.readlines()]\n",
     "\n",
-    "# Thiết lập giao diện\n",
-    "pdf_file_dropdown = widgets.Dropdown(options=pdf_files, description='Select PDF File')\n",
+    "# Thiết lập giao diện với \"All PDF Files\" ở đầu danh sách\n",
+    "pdf_file_dropdown = widgets.Dropdown(\n",
+    "    options=[\"All PDF Files\"] + pdf_files,  \n",
+    "    description='Select PDF File'\n",
+    ")\n",
     "submit_button = widgets.Button(description='Submit')\n",
     "progress_bar = widgets.FloatProgress(value=0.0, min=0.0, max=1.0, description='Progress:', bar_style='info')\n",
     "status_label = widgets.Label(value=\"\")\n",
@@ -307,28 +309,33 @@
     "\n",
     "# Hàm xử lý khi bấm nút Submit\n",
     "def on_submit_clicked(b):\n",
-    "    pdf_file = pdf_file_dropdown.value\n",
-    "    progress_bar.value = 0\n",
-    "    status_label.value = \"Bắt đầu đếm từ khóa...\"\n",
-    "    count_results = count_word_occurrences(os.path.join(directory_path, pdf_file), keywords, progress_bar, status_label)\n",
-    "    \n",
-    "    # Chuẩn bị dữ liệu cho file JSON\n",
-    "    new_results = [{\"PDF File\": pdf_file, \"Keyword\": keyword, \"Count\": count} for keyword, count in count_results.items()]\n",
-    "    \n",
+    "    selected_option = pdf_file_dropdown.value\n",
     "    output_file = \"all_pdf_keyword_counts.json\"\n",
-    "    \n",
-    "    # Nếu file JSON đã tồn tại, thêm dữ liệu mới vào sau các dữ liệu cũ\n",
-    "    if os.path.exists(output_file):\n",
+    "    all_results = []\n",
+    "\n",
+    "    if selected_option == \"All PDF Files\":\n",
+    "        status_label.value = \"Bắt đầu đếm từ khóa cho tất cả các tệp PDF...\"\n",
+    "        for pdf_file in pdf_files:\n",
+    "            count_results = count_word_occurrences(os.path.join(directory_path, pdf_file), keywords, progress_bar, status_label)\n",
+    "            new_results = [{\"PDF File\": pdf_file, \"Keyword\": keyword, \"Count\": count} for keyword, count in count_results.items()]\n",
+    "            all_results.extend(new_results)\n",
+    "    else:\n",
+    "        pdf_file = selected_option\n",
+    "        status_label.value = f\"Đang đếm từ khóa cho tệp: {pdf_file}\"\n",
+    "        count_results = count_word_occurrences(os.path.join(directory_path, pdf_file), keywords, progress_bar, status_label)\n",
+    "        all_results = [{\"PDF File\": pdf_file, \"Keyword\": keyword, \"Count\": count} for keyword, count in count_results.items()]\n",
+    "\n",
+    "    # Ghi kết quả vào JSON\n",
+    "    if os.path.exists(output_file) and os.path.getsize(output_file) > 0:\n",
     "        with open(output_file, 'r', encoding='utf-8') as f:\n",
     "            existing_data = json.load(f)\n",
-    "            existing_data.extend(new_results)\n",
+    "            existing_data.extend(all_results)\n",
     "        \n",
     "        with open(output_file, 'w', encoding='utf-8') as f:\n",
     "            json.dump(existing_data, f, ensure_ascii=False, indent=4)\n",
     "    else:\n",
-    "        # Nếu file chưa tồn tại, tạo file mới\n",
     "        with open(output_file, 'w', encoding='utf-8') as f:\n",
-    "            json.dump(new_results, f, ensure_ascii=False, indent=4)\n",
+    "            json.dump(all_results, f, ensure_ascii=False, indent=4)\n",
     "    \n",
     "    with result_output:\n",
     "        result_output.clear_output()\n",
