Push Classifi Encode and Non_encode pdf

--- a/Update.ipynb
+++ b/Update.ipynb
@@ -354,6 +354,207 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Update code phân loại encode và không encode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ad7ccad4e67449c998b4165481fede4c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Select PDF File', options=('All PDF Files', 'ACV_Baocaothuongnien_2019.pdf', 'BC.pdf'), …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8ba86d05f9ea4d9f8b278cbfadcaee7a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Submit', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "613abd26a9a84e538b66062b5c35e59d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', max=1.0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "126bfe3998ed4d08b7e5258f6462839d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Label(value='')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4c7473bab81e4197ba78d3192797b056",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import os\n",
+    "import re\n",
+    "import shutil\n",
+    "from pdfminer.high_level import extract_text\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "\n",
+    "# Hàm để đếm số lần xuất hiện của các từ khóa với phân biệt hoa-thường\n",
+    "def count_word_occurrences(file_path, target_words, progress_bar, status_label):\n",
+    "    with open(file_path, 'rb') as file:\n",
+    "        text = extract_text(file)\n",
+    "\n",
+    "    occurrences = {}\n",
+    "    total_count = 0  # Tổng số lần từ khóa xuất hiện\n",
+    "    \n",
+    "    for i, target_word in enumerate(target_words):\n",
+    "        progress_bar.value = (i + 1) / len(target_words)\n",
+    "        status_label.value = f\"Đang kiểm tra từ khóa '{target_word}'...\"\n",
+    "        \n",
+    "        # Kiểm tra phân biệt hoa-thường cho \"AI\" và \"ai\"\n",
+    "        if target_word == \"AI\":\n",
+    "            count = len(re.findall(r'\\bAI\\b', text))\n",
+    "        elif target_word == \"ai\":\n",
+    "            count = len(re.findall(r'\\bai\\b', text))\n",
+    "        else:\n",
+    "            pattern = re.compile(r'\\b{}\\b'.format(re.escape(target_word)), re.IGNORECASE)\n",
+    "            count = len(re.findall(pattern, text))\n",
+    "        \n",
+    "        occurrences[target_word] = count\n",
+    "        total_count += count  # Cộng dồn số lần xuất hiện cho từng từ khóa\n",
+    "\n",
+    "    # Kiểm tra phân loại PDF\n",
+    "    is__non_encoded = total_count > 0  # PDF được mã hóa nếu có ít nhất 1 từ khóa xuất hiện\n",
+    "    return occurrences, is__non_encoded\n",
+    "\n",
+    "# Tự động lấy danh sách file PDF trong thư mục\n",
+    "directory_path = \"DemoScan/non_scanned_pdfs/\"\n",
+    "pdf_files = [f for f in os.listdir(directory_path) if f.endswith('.pdf')]\n",
+    "\n",
+    "# Đọc danh sách từ khóa từ file txt\n",
+    "txt_file = \"keywords.txt\"\n",
+    "with open(txt_file, \"r\", encoding=\"utf-8\") as file:\n",
+    "    keywords = [line.strip() for line in file.readlines()]\n",
+    "\n",
+    "# Thiết lập giao diện với \"All PDF Files\" ở đầu danh sách\n",
+    "pdf_file_dropdown = widgets.Dropdown(\n",
+    "    options=[\"All PDF Files\"] + pdf_files,\n",
+    "    description='Select PDF File'\n",
+    ")\n",
+    "submit_button = widgets.Button(description='Submit')\n",
+    "progress_bar = widgets.FloatProgress(value=0.0, min=0.0, max=1.0, description='Progress:', bar_style='info')\n",
+    "status_label = widgets.Label(value=\"\")\n",
+    "result_output = widgets.Output()\n",
+    "\n",
+    "# Đường dẫn thư mục đích để lưu các file đã phân loại\n",
+    "encoded_dir = \"DemoScan/non_scanned_pdfs/Encoded_PDFs\"\n",
+    "non_encoded_dir = \"DemoScan/non_scanned_pdfs/Non_Encoded_PDFs\"\n",
+    "os.makedirs(encoded_dir, exist_ok=True)\n",
+    "os.makedirs(non_encoded_dir, exist_ok=True)\n",
+    "\n",
+    "# Hàm xử lý khi bấm nút Submit\n",
+    "def on_submit_clicked(b):\n",
+    "    selected_option = pdf_file_dropdown.value\n",
+    "    output_file = \"all_pdf_keyword_counts.json\"\n",
+    "    all_results = []\n",
+    "\n",
+    "    if selected_option == \"All PDF Files\":\n",
+    "        status_label.value = \"Bắt đầu đếm từ khóa cho tất cả các tệp PDF...\"\n",
+    "        for pdf_file in pdf_files:\n",
+    "            count_results, is__non_encoded = count_word_occurrences(os.path.join(directory_path, pdf_file), keywords, progress_bar, status_label)\n",
+    "            new_results = [{\"PDF File\": pdf_file, \"Keyword\": keyword, \"Count\": count} for keyword, count in count_results.items()]\n",
+    "            all_results.extend(new_results)\n",
+    "            \n",
+    "            # Di chuyển file vào thư mục đã phân loại\n",
+    "            if is__non_encoded:\n",
+    "                shutil.move(os.path.join(directory_path, pdf_file), os.path.join(non_encoded_dir, pdf_file))\n",
+    "            else:\n",
+    "                shutil.move(os.path.join(directory_path, pdf_file), os.path.join(encoded_dir, pdf_file))\n",
+    "                \n",
+    "    else:\n",
+    "        pdf_file = selected_option\n",
+    "        status_label.value = f\"Đang đếm từ khóa cho tệp: {pdf_file}\"\n",
+    "        count_results, is__non_encoded = count_word_occurrences(os.path.join(directory_path, pdf_file), keywords, progress_bar, status_label)\n",
+    "        all_results = [{\"PDF File\": pdf_file, \"Keyword\": keyword, \"Count\": count} for keyword, count in count_results.items()]\n",
+    "\n",
+    "        # Di chuyển file vào thư mục đã phân loại\n",
+    "        if is__non_encoded:\n",
+    "            shutil.move(os.path.join(directory_path, pdf_file), os.path.join(non_encoded_dir, pdf_file))\n",
+    "        else:\n",
+    "            shutil.move(os.path.join(directory_path, pdf_file), os.path.join(encoded_dir, pdf_file))\n",
+    "\n",
+    "    # Ghi kết quả đếm từ khóa vào JSON\n",
+    "    if os.path.exists(output_file) and os.path.getsize(output_file) > 0:\n",
+    "        with open(output_file, 'r', encoding='utf-8') as f:\n",
+    "            existing_data = json.load(f)\n",
+    "            existing_data.extend(all_results)\n",
+    "        \n",
+    "        with open(output_file, 'w', encoding='utf-8') as f:\n",
+    "            json.dump(existing_data, f, ensure_ascii=False, indent=4)\n",
+    "    else:\n",
+    "        with open(output_file, 'w', encoding='utf-8') as f:\n",
+    "            json.dump(all_results, f, ensure_ascii=False, indent=4)\n",
+    "\n",
+    "    with result_output:\n",
+    "        result_output.clear_output()\n",
+    "        print(f\"Kết quả đã được lưu vào file JSON: {output_file}\")\n",
+    "    \n",
+    "    status_label.value = \"Hoàn thành!\"\n",
+    "\n",
+    "# Gán hàm xử lý vào nút\n",
+    "submit_button.on_click(on_submit_clicked)\n",
+    "\n",
+    "# Hiển thị giao diện\n",
+    "display(pdf_file_dropdown, submit_button, progress_bar, status_label, result_output)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Đoạn code chuyển dữ liệu từ file json sang excel"
    ]
   },
@@ -493,6 +694,99 @@
     "    non_scanned_folder = \"./DemoScan/non_scanned_pdfs\"\n",
     "    \n",
     "    classify_pdfs(source_directory, scanned_folder, non_scanned_folder)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Đoạn code lấy ảnh trong thư mục và dùng google photos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Version 4.25.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import selenium\n",
+    "print(\"Version \" + selenium.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import time\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.chrome.options import Options\n",
+    "import pytesseract\n",
+    "from PIL import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cấu hình Selenium (đảm bảo đã cài đặt ChromeDriver)\n",
+    "chrome_options = Options()\n",
+    "chrome_options.add_argument(\"--start-maximized\")\n",
+    "chrome_driver_path = \"/path/to/chromedriver\"  # Đường dẫn tới chromedriver\n",
+    "service = Service(chrome_driver_path)\n",
+    "\n",
+    "driver = webdriver.Chrome(service=service, options=chrome_options)\n",
+    "\n",
+    "# Đường dẫn đến ảnh trong thư mục\n",
+    "image_folder = \"/BCphotos/\"\n",
+    "image_files = [os.path.join(image_folder, img) for img in os.listdir(image_folder) if img.endswith(\".jpg\") or img.endswith(\".png\")]\n",
+    "\n",
+    "# Đường dẫn lưu file txt\n",
+    "output_txt_file = \"/path/to/output/folder/extracted_texts.txt\"\n",
+    "\n",
+    "# Mở trang Google Photos và đăng nhập\n",
+    "driver.get(\"https://photos.google.com\")\n",
+    "time.sleep(5)  # Đợi trang tải xong (cần tối ưu hơn với WebDriverWait)\n",
+    "\n",
+    "# TODO: Thực hiện đăng nhập (cần thêm mã tự động đăng nhập nếu cần)\n",
+    "\n",
+    "# Tải ảnh lên Google Photos\n",
+    "for image_file in image_files:\n",
+    "    upload_button = driver.find_element(By.XPATH, '//*[@aria-label=\"Upload photos or videos\"]')\n",
+    "    upload_button.click()\n",
+    "\n",
+    "    # Mở hộp thoại tải ảnh\n",
+    "    file_input = driver.find_element(By.XPATH, '//*[@type=\"file\"]')\n",
+    "    file_input.send_keys(image_file)\n",
+    "\n",
+    "    time.sleep(10)  # Đợi ảnh tải xong (có thể tối ưu hóa bằng WebDriverWait)\n",
+    "\n",
+    "# Trích xuất văn bản từ ảnh và lưu vào file txt\n",
+    "with open(output_txt_file, \"w\", encoding=\"utf-8\") as file:\n",
+    "    for image_file in image_files:\n",
+    "        image = Image.open(image_file)\n",
+    "        text = pytesseract.image_to_string(image)\n",
+    "        file.write(f\"Text from {image_file}:\\n\")\n",
+    "        file.write(text)\n",
+    "        file.write(\"\\n\" + \"=\"*50 + \"\\n\")  # Ghi vào file và phân cách giữa các ảnh\n",
+    "        print(f\"Text from {image_file} saved to {output_txt_file}\")\n",
+    "\n",
+    "# Đóng trình duyệt sau khi hoàn tất\n",
+    "driver.quit()\n"
    ]
   }
  ],
